# ZN_DeployCenter

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
src/: App.tsx  dashboard.rs  files.rs  index.css  logs.rs  main.rs  news.rs  settings.rs  terminal.rs  users.rs
src/components/: Dashboard.tsx  FileManager.tsx  LogsViewer.tsx  NewsManager.tsx  ServerSettings.tsx  Sidebar.tsx  Terminal.tsx  UserManager.tsx
src/components/ui/: scroll-area.tsx
src/styles/: globals.css
