[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
